# ultralytics-intel-arc-xpu

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  ultralytics-xpu
examples/: benchmark_xpu.py  predict_xpu.py  train_custom_xpu.py  train_yolo11n_xpu.py
scripts/: patch.sh  restore.sh
ultralytics_xpu/: __init__.py  __main__.py  cli.py  env.py  patcher.py  restorer.py  ui.py
